turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: type mismatch;
 found   : java.awt.Color
 required: Int
		if (getCouleurSol() == colors(i)) {
                                              ^LangtonsAnt:7: error: type mismatch;
 found   : java.awt.Color
 required: Int
			if (rule(i) == 'R') {
                                 ^